--- a/src/mist/io/static/main.css
+++ b/src/mist/io/static/main.css
@@ -151,7 +151,9 @@ h4 {
     padding: 0;
     text-shadow: 0 0 0 transparent !important;
 }
-
+.ui-popup-container {
+    position: fixed;
+}
 .ui-popup-container .ui-header {
     border: none !important;
     background-color: #d4d4d4;
@@ -444,6 +446,9 @@ textarea {
 }
 #dialog .ui-content{
     text-align: center;
+}
+.tiny-popup {
+    min-width: 150px !important;
 }
 .small-popup {
     width: 240px !important;
